# sierra-charts-studies

./: .gitignore  CMakeLists.txt  README.md  dataWriter.cpp  holdAboveAndBelowStudies.cpp  lines.cpp  news.cpp  simpleStats.cpp  tradeSystemFailAtExtremes.cpp  writeFiles.cpp
